- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.15.1
- 
    None
- 
        
- 
        4df5f93018344f6cdc6cd5a08a084b1c61e0c076 (qt/qtbase/dev) 7371d3ae92b06eb7d88c6bf795c6cd82ef044964 (qt/qtbase/5.15)
Application crash if click right button of mouse on item of QGraphicsItem
- replaces
- 
                    QTCREATORBUG-25226 Scxml editor crashes when opening a context menu -         
- Closed
 
-         
- 
                    QTCREATORBUG-25357 modeling plugin crashes qt creator on right click in class name field -         
- Closed
 
-         
- resulted from
- 
                    QTBUG-76162 When using separate dual displays (no Xinerama), menus will popup on display 0 even if the parent is on display 1 -         
- Closed
 
-