src/widgets/widgets/qwidgettextcontrol.cpp
@@ -1943,8 +1943,12 @@ void QWidgetTextControlPrivate::contextMenuEvent(const QPoint &screenPos, const 
     if (!menu)
         return;
     menu->setAttribute(Qt::WA_DeleteOnClose);
-    if (auto *window = static_cast<QWidget *>(parent)->window()->windowHandle())
-        QMenuPrivate::get(menu)->topData()->initialScreen = window->screen();
+
+    if (auto *widget = qobject_cast<QWidget *>(parent)) {
+        if (auto *window = widget->window()->windowHandle())
+            QMenuPrivate::get(menu)->topData()->initialScreen = window->screen();
+    }
+
     menu->popup(screenPos);
 #endif
 }
